Double border on selected sorter header fix.

--- a/portal-web/docroot/html/themes/_styled/css/application.css
+++ b/portal-web/docroot/html/themes/_styled/css/application.css
@@ -57,6 +57,13 @@
 	}
 
 	th.sort-desc .result-column-name {
+		background: url(../images/arrows/05_up.png) no-repeat 100% 50%;
+		display: inline-block;
+		font-style: italic;
+		padding-right: 15px;
+	}
+
+	.sort-desc .result-column-name {
 		background-image: url(../images/arrows/05_down.png);
 	}
 
@@ -594,9 +601,7 @@
 	margin-left: 2em;
 }
 
-.taglib-page-iterator .search-pages .page-links {
-	padding: 0;
-}
+/* ---------- Application Column View ---------- */
 
 /* ---------- App Column View ---------- */
 
